updated links to homework and projects, added resume, linked linkedin profile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a href="#contact-me">Contact Me</a>
                         </li>
                         <li>
-                            <a href="#resume">Resume</a>
+                            <a href="WD_Resume_Jessica Haff.pdf">Resume</a>
                         </li>
                     </ul>
                 </nav>
@@ -65,22 +65,22 @@
                     <h3>Work</h3>
                 </div>
                 <div class="work-grid-wrapper">
-                    <a class="work-label1 flex-item" href="https://github.com/jesshaff/code-refactor-homework-1">
+                    <a class="work-label1 flex-item" href="https://jesshaff.github.io/feed-me-food-finder-project-1/">
                         <div>
-                            <h4>Feed Me Food Finder - Project 1</h4>
-                            <p>HTML/CSS</p>
+                            <h4>Feed Me Food Finder</h4>
+                            <p>HTML/CSS/JS/JQUERY/API'S</p>
                         </div>
                     </a>
-                    <a class="work-label2 flex-item small-rows" href="">
+                    <a class="work-label2 flex-item small-rows" href="https://jesshaff.github.io/server-side-APIs-weather-dashboard-6/">
                         <div>
-                            <h4>TBD</h4>
-                            <p>Javascript</p>
+                            <h4>Weather Dashboard</h4>
+                            <p>HTML/CSS/JS/JQUERY/API'S</p>
                         </div>
                     </a>
-                    <a class="work-label3 flex-item small-rows" href="">
+                    <a class="work-label3 flex-item small-rows" href="https://jesshaff.github.io/third-party-APIs-work-day-scheduler-5/">
                         <div>
-                            <h4>TBD</h4>
-                            <p>TBD</p>
+                            <h4>Work Day Scheduler</h4>
+                            <p>HTML/CSS/JS/JQUERY/API'S</p>
                         </div>
                     </a>
                     <a class="work-label4 flex-item small-rows" href="">
