--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <a href="#contact-me">Contact Me</a>
                         </li>
                         <li>
-                            <a href="assets/WD_Resume_Jessica Haff.pdf">Resume</a>
+                            <a href="../assets/WD_Resume_Jessica Haff.pdf">Resume</a>
                         </li>
                     </ul>
                 </nav>
