updated with new projects

--- a/index.html
+++ b/index.html
@@ -68,31 +68,31 @@
                     <a class="work-label1 flex-item" href="https://jesshaff.github.io/feed-me-food-finder-project-1/">
                         <div>
                             <h4>Feed Me Food Finder</h4>
-                            <p>HTML/CSS/JS/JQUERY/API'S</p>
+                            <p>JS/HTML/CSS</p>
                         </div>
                     </a>
                     <a class="work-label2 flex-item small-rows" href="https://jesshaff.github.io/server-side-APIs-weather-dashboard-6/">
                         <div>
                             <h4>Weather Dashboard</h4>
-                            <p>HTML/CSS/JS/JQUERY/API'S</p>
+                            <p>JS/HTML/CSS</p>
                         </div>
                     </a>
                     <a class="work-label3 flex-item small-rows" href="https://jesshaff.github.io/third-party-APIs-work-day-scheduler-5/">
                         <div>
                             <h4>Work Day Scheduler</h4>
-                            <p>HTML/CSS/JS/JQUERY/API'S</p>
+                            <p>HTLM/JS/CSS</p>
                         </div>
                     </a>
-                    <a class="work-label4 flex-item small-rows" href="">
+                    <a class="work-label4 flex-item small-rows" href="https://github.com/jesshaff/SQL-employee-tracker-12">
                         <div>
-                            <h4>TBD</h4>
-                            <p>TBD</p>
+                            <h4>SQL Employee Tracker</h4>
+                            <p>JS</p>
                         </div>
                     </a>
-                    <a class="work-label5 flex-item small-rows" href="">
+                    <a class="work-label5 flex-item small-rows" href="https://thrve-app.herokuapp.com/login">
                         <div>
-                            <h4>TBD</h4>
-                            <p>TBD</p>
+                            <h4>THRVE App</h4>
+                            <p>Handlebars/CSS/JS/HTML</p>
                         </div>
                     </a>
                 </div>
